# CMakeDetours

./: CMakeLists.txt  DetoursConfig.cmake.in
cmake/: DetoursConfig.cmake.in
